--- a/refs.bib
+++ b/refs.bib
@@ -17,6 +17,46 @@
   publisher={Oxford University Press}
 }
 
+@ARTICLE{2019JCAP...09..010C,
+       author = {{Castorina}, Emanuele and {Hand}, Nick and {Seljak}, Uro{\v{s}} and {Beutler}, Florian and {Chuang}, Chia-Hsun and {Zhao}, Cheng and {Gil-Mar{\'\i}n}, H{\'e}ctor and {Percival}, Will J. and {Ross}, Ashley J. and {Choi}, Peter Doohyun and {Dawson}, Kyle and {de la Macorra}, Axel and {Rossi}, Graziano and {Ruggeri}, Rossana and {Schneider}, Donald and {Zhao}, Gong-Bo},
+        title = "{Redshift-weighted constraints on primordial non-Gaussianity from the clustering of the eBOSS DR14 quasars in Fourier space}",
+      journal = {\jcap},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2019,
+        month = sep,
+       volume = {2019},
+       number = {9},
+          eid = {010},
+        pages = {010},
+          doi = {10.1088/1475-7516/2019/09/010},
+archivePrefix = {arXiv},
+       eprint = {1904.08859},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019JCAP...09..010C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{2022arXiv220111518D,
+       author = {{D'Amico}, Guido and {Lewandowski}, Matthew and {Senatore}, Leonardo and {Zhang}, Pierre},
+        title = "{Limits on primordial non-Gaussianities from BOSS galaxy-clustering data}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2022,
+        month = jan,
+          eid = {arXiv:2201.11518},
+        pages = {arXiv:2201.11518},
+          doi = {10.48550/arXiv.2201.11518},
+archivePrefix = {arXiv},
+       eprint = {2201.11518},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022arXiv220111518D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{2022JCAP...11..013B,
        author = {{Barreira}, Alexandre},
         title = "{Can we actually constrain f$_{NL}$ using the scale-dependent bias effect? An illustration of the impact of galaxy bias uncertainties using the BOSS DR12 galaxy power spectrum}",
@@ -480,6 +520,27 @@ title = {Ohio Supercomputer Center}
 }
 
 
+@ARTICLE{2022PhRvD.106d3506C,
+       author = {{Cabass}, Giovanni and {Ivanov}, Mikhail M. and {Philcox}, Oliver H.~E. and {Simonovi{\'c}}, Marko and {Zaldarriaga}, Matias},
+        title = "{Constraints on multifield inflation from the BOSS galaxy survey}",
+      journal = {\prd},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2022,
+        month = aug,
+       volume = {106},
+       number = {4},
+          eid = {043506},
+        pages = {043506},
+          doi = {10.1103/PhysRevD.106.043506},
+archivePrefix = {arXiv},
+       eprint = {2204.01781},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022PhRvD.106d3506C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{schmittfull2018PhRvD,
        author = {{Schmittfull}, Marcel and {Seljak}, Uro{\v{s}}},
         title = "{Parameter constraints from cross-correlation of CMB lensing with galaxy clustering}",
@@ -628,6 +689,47 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@article{arlot2010survey,
+author = {Sylvain Arlot and Alain Celisse},
+title = {{A survey of cross-validation procedures for model selection}},
+volume = {4},
+journal = {Statistics Surveys},
+number = {none},
+publisher = {Amer. Statist. Assoc., the Bernoulli Soc., the Inst. Math. Statist., and the Statist. Soc. Canada},
+pages = {40 -- 79},
+keywords = {cross-validation, leave-one-out, Model selection},
+year = {2010},
+doi = {10.1214/09-SS054},
+URL = {https://doi.org/10.1214/09-SS054}
+}
+
+@ARTICLE{2016arXiv160803983L,
+       author = {{Loshchilov}, Ilya and {Hutter}, Frank},
+        title = "{SGDR: Stochastic Gradient Descent with Warm Restarts}",
+      journal = {arXiv e-prints},
+     keywords = {Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing, Mathematics - Optimization and Control},
+         year = 2016,
+        month = aug,
+          eid = {arXiv:1608.03983},
+        pages = {arXiv:1608.03983},
+          doi = {10.48550/arXiv.1608.03983},
+archivePrefix = {arXiv},
+       eprint = {1608.03983},
+ primaryClass = {cs.LG},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016arXiv160803983L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@inproceedings{nair2010rectified,
+  title={Rectified linear units improve restricted boltzmann machines},
+  author={Nair, Vinod and Hinton, Geoffrey E},
+  booktitle={Proceedings of the 27th international conference on machine learning (ICML-10)},
+  pages={807--814},
+  year={2010}
+}
 
 
 
