--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-This paper uses the large-scale clustering of luminous red galaxies selected from the Dark Energy Spectroscopic Instrument (DESI) Legacy Imaging Surveys Data Release 9 to constrain the local primordial non-Gaussianity (PNG) parameter $\fnl$. We thoroughly investigate the impact of various photometric systematic effects, such as those caused by Galactic extinction, local stellar density, varying survey depth, and astronomical seeing using spherical harmonics cross power spectrum and mean galaxy density statistics. Lognormal density fields are simulated with and without PNG to construct covariance matrices, evaluate the robustness of power spectrum modeling code, assess whether spurious fluctuations are properly mitigated, and calibrate imaging systematics cleaning methods. With harmonic modes from $\ell=2$ to $300$, we find $36.07(25.03) < \fnl < 61.44(75.64)$ with a conservative cleaning approach and $13.09(-15.95) < \fnl < 69.14(91.84)$ with an extreme treatment of imaging systematics, both at $68\%$($95\%$) confidence. We find significant remaining systematic error raised by calibration issues in the South Galactic Cap and local stellar density in the North Galactic Cap, which induce noticeable biases in $\fnl$ constraints. While our constraints are consistent with zero PNG at $95\%$ confidence for the extreme approach, we show that the characterization of stellar contamination and calibration issues are crucial to derive unbiased constraints on $\fnl$ in the era of DESI and Rubin Observatory.
+This paper uses the angular power spectrum of luminous red galaxies selected from the Dark Energy Spectroscopic Instrument (DESI) imaging surveys to probe local primordial non-Gaussianity (PNG). The FFTLog algorithm is applied to enable modeling the angular power spectrum on large scales. Linear multivariate regression and artificial neural networks are applied to alleviate excess clustering signals caused by varying survey conditions such as depth, extinction, and astronomical seeing. Feature selection and cross-correlation techniques are implemented to find various levels of systematic mitigation ranging from conservative to extreme. Assuming that only halo mass determines halo occupation, we find $36.08(25.03) < \fnl < 61.44(75.64)$ and $13.10(-15.96) < \fnl < 69.14(91.84)$ at $68\%$($95\%$) confidence, respectively, with our conservative and rigorous methods. The methods are tested and calibrated rigorously against lognormal density simulations with $\fnl=0$ and $76.9$, and realistic systematic effects included. When tested against the simulations without systematics, significant issues are observed regarding photometric calibration in the South Galactic Cap below DEC$=-30$ and stellar contamination in the North Galactic Cap. Assuming Planck's measurement is accurate a priori, our results provide evidence for some unknown calibration or stellar contamination issues. While more theoretical work and simulations are required to better understand halo assembly bias, our results motivate followup studies of local PNG and observational systematics with DESI spectroscopic samples, which are less prone to calibration and contamination issues.
 \end{abstract}
