--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,39 +1,8 @@
 \section{Conclusions}\label{sec:conclusion}
-We have presented constraints on $\fnl$ using the scale-dependent bias effect in the large-scale clustering of DESI imaging DR9 LRGs. Methods from linear and nonlinear regressions are applied for data cleaning from foreground and imaging systematic effects. Same tools are tested on lognormal density fields to evaluate the sensitivity of signal to systematic error. As summarized in Table ??, we find that fitting $\log C_{\ell}$ rather than $C_{\ell}$ minimizes the dependence of constraints to the choice of covariance, and we are able to recover the truth $\fnl$ at $95\%$ confidence in both simulations with and without PNG. Table ??? summarizes the constraints from mocks undergone cleaning for systematics. We find that template-based regression removes clustering and thus biased constraints are obtained. We use the mock constraints to calibrate DR9 constraints. We obtain $36.07 (25.03) < \fnl < 61.44(75.64)$ when cleaning is performed with the nonlinear model using only three imaging maps. With more extreme cleaning using all maps and stellar density, we obtain $13.09(-15.95) < \fnl < 69.14(91.84)$ at $68\% (95\%)$.  
+We have presented constraints on the local primordial non-Gaussianity parameter $\fnl$ from the angular power spectrum of LRGs from the DESI imaging DR9. We infer the redshift distribution of LRGs from early spectroscopy during DESI Survey Validation. The data set covers around 14,000 square degrees in the redshift range of 0.2< z < 1.1. Our analysis utilizes the scale-dependent bias effect that primarily comes from large scales; thus, it is sensitive to systematic errors caused by photometric calibration issues, survey depth variations, and Milky Way foregrounds. 
 
-Various tests are performed to assess the robustness of constraints against analysis assumptions, and the results are summarized in Table ??. We find
-\begin{itemize}
-\item constraints from individual surveys are consistent with each other
-\item no significant shift observed in constraints after applying imaging cut, completeness cut
-\item no significant shift after including additional imaging templates for hydrogen column density or calibration in the z-band.
-\item region below dec of -30 indicates some issues probably due to unaccounted for calibration issues
-\item constraints are robust against the largest scales (lowest $\ell$ mode) used in fitting for $\fnl$. \mr{Some signs of systematics on $10 < \ell < 18$.}
-\end{itemize}
+We use the FFTLog algorithm to model the angular clustering on large scales. We simulate lognormal density fields with similar angular and redshift distributions to validate the pipeline, estimate covariance matrices, and characterize remaining systematic errors. Our mock test reveals that the distribution of power spectra on large scales is asymmetric. We demonstrate our analysis can benefit from fitting the log transformation of the power spectrum. 
 
-%We have performed a thorough study of imaging systematic effects and various template-based mitigation techniques in the final sample of quasars \citep{lyke2020dr16qso, ross2020lss} from the eBOSS DR16 \citep{Ahumada2020ApJS}. We present a nonlinear cleaning approach, based on artificial neural networks, and compare the treatment effectiveness with the standard method, based on linear regression. The methods are applied to model the observed density of quasars given a set of templates for imaging properties, related to SDSS properties and Galactic foregrounds, which include stellar density, Galactic extinction, neutral hydrogen column density, depth, seeing, sky brightness, airmass, and run. As summarized in Tab. \ref{tab:chi2methods},
-%\begin{enumerate}[leftmargin=1\parindent]
-%    \item We find that the neural network-based approach outperforms standard linear regression by allowing more freedom for correcting nonlinear and complex variations in the quasar density caused by imaging properties, see Fig. \ref{fig:nbarmethods} and \ref{fig:data_nbar}. The approach is also further improved by using the Poisson statistics to account for the sparsity of the DR16 sample.
-%    
-%    \item Stellar density is one of the most important sources of spurious fluctuations, and a new template constructed using the Gaia DR2 \citep{gaia2018} yields the best agreement to the observed chi-squared values in the simulations, see Fig. \ref{fig:nbarnstar} and Tab. \ref{tab:chi2methods}. We also show that linear treatment, with the Gaia map included, is still not able to properly remove systematics.
-%    
-%    \item We find no evidence for redshift-dependent imaging systematics and no substantial difference after changing the pixel resolution of imaging templates, see Fig. \ref{fig:nbarsplit}. Therefore we choose NN trained with PNLL, cyclic learning, and imaging templates in $\nside=512$ as our default approach.
-%    
-%\end{enumerate}
-%
-%We utilize the EZmocks, both in the presence and absence of imaging systematics, to construct covariance matrices, quantify residual systematic error, and assess the quality of the DR16 sample for cosmological studies. We find
-%\begin{enumerate}[resume, leftmargin=1\parindent]
-%
-%    \item The mean density null test shows some remaining systematic error in the catalogue with the standard weights in the NGC region, specifically $\chi^{2}=218.1$ with $p{\rm -value}=0.2\%$. Although this test does not reveal any issues with the standard catalogue in the SGC region, $\chi^{2}=132.5$ with $p{\rm -value}=65.0\%$ (see Tab. \ref{tab:chi2_nbar}), our second null test based on cross-power spectra unveils a significant systematic error in the SGC, $\chi^{2}=404.3$ with $p{\rm -value}=0.7\%$.
-%    
-%    \item This work motivates further investigations of linear systematic treatment methods in future galaxy surveys since the 1D diagnostic based on the mean density contrast does not indicate any issues with the standard treatment in the SGC (see Fig. \ref{fig:chi2_nbar}).
-%    
-%    \item The catalogue with the neural network-based systematic weights passes both null tests by providing substantially lower $\chi^{2}$ values, see Fig. \ref{fig:chi2_nbar} and \ref{fig:chi2_cell}.
-%    
-%\end{enumerate}
-%
-%Collectively, these tests demonstrate that the DR16 quasar catalogue with the standard systematic weights suffer from residual imaging systematics in both Galactic caps, and should not be used for measuring quasar clustering on large scales, i.e., $k < 0.01~h/{\rm Mpc}$, as shown in Fig. \ref{fig:p0data}. Nevertheless, it is expected that the impact of imaging systematics to be insignificant on the BAO measurements \citep[e.g., analyses presented in ][]{hou2020qso, neveux2020qso}, and a thorough investigation is conducted in a companion paper \citep{merz2020bao}.
-%
-%We then apply our methods on the EZmocks to quantify the impact of systematics treatment on quasar clustering measurements, see Fig. \ref{fig:p0mocks}. The neural-network treatment removes some of the cosmological power due to allowing for more freedom in removing systematic effects. We find that the impacts of overfitting on the mean of the mock power spectra and its error are marginal for $k > 0.004~h/{\rm Mpc}$. We employ linear regression to model the impact of mitigation on recovering the ground truth clustering, see Fig. \ref{fig:dpvsp}. We emphasize that the utility of the mitigation bias treatment is not clear since the parameters are derived from the mocks without realistic imaging systematics, see Fig. \ref{fig:chi2_nbar} and \ref{fig:chi2_cell}. However, we investigate the effect on primordial non-Gaussianity constraints in a companion paper \citep{mueller2020fnl}.
-%
-%
-%The end-product from this work is a new value-added quasar catalogue with the enhanced weights to correct for nonlinear imaging systematic effects. The new weights are necessary to make a robust measurement of quasar clustering on large scales ($k < 0.01~h/{\rm Mpc}$). This catalogue is used in a companion paper constraining the local-type primordial non-Gaussianity \citep{mueller2020fnl}.
+Multivariate linear and neural network-based regression models are applied to regress out spurious fluctuations in the LRG density field against various maps for the extinction, survey depth, astronomical seeing, neural hydrogen column density, and stellar density. Feature selection uses the Pearson correlation and the Spearman correlation coefficients to reduce the likelihood of over-correction, i.e., removing the clustering signal. The LRG density map is cross-correlated against the imaging maps. We quantify the remaining systematic fluctuations using the mean density and cross-power spectrum and run null tests against lognormal density fields. Our simulation-based tests reveal that the DR9 LRG sample with linear correction suffers from remaining systematic error primarily due to depth variations. We observe that the nonlinear mitigation approach reduces the excess clustering signal more effectively. We identify the extinction, z-band depth, and r-band seeing as the primary sources of systematic error. 
+
+We apply our cleaning methods to the lognormal mocks with and without PNG, with and without systematic effects, to calibrate the level of mitigation biases introduced in our constraints. With this conservative set of maps, we obtain values inconsistent with zero at more than $95\%$ confidence. Adding a template for local stellar density does not change the limits. However, using all imaging maps and stellar density yields an asymmetric likelihood distribution. Nevertheless, our nonlinear cleaning methods return consistent maximum likelihood estimates. Assuming Planck's measurement is accurate a priori, our results indicate some unknown systematic error. Our results suggest a follow-up investigation of stellar contamination and depth-related variations in the spectroscopic sample of DESI LRGs. A second source of theoretical uncertainty is that our analysis considers the halo bias depends on halo mass only. So, a better characterization of observational uncertainties, coupled with more simulation-based studies of halo-assembly bias, is crucial to constrain local primordial non-Gaussianity with large-scale structure.
