--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,14 +1,19 @@
 \section{Introduction}
 \label{sec:introduction}
-Characteristics of the temperate anisotropy and polarization maps from the cosmic microwave background (CMB) and that of the galaxy density fluctuations probed by large-scale structure (LSS) surveys are explained to remarkable extents by a cosmological model for the universe that consists of dark energy, dark matter, and ordinary luminous matter, and has experienced a period of rapid expansion, known as \textit{inflation}, in its early stages \citep[see, e.g.,][for a review]{weinberg2013observational}. The paradigm of inflation elegantly addresses fundamental issues, such as the isotropy, flatness, and homogeneity of the universe as well as the absence of magnetic monopoles \citep[see, e.g.,][]{weinberg2008cosmology}. At the end of inflation, the universe went through a reheating process, and primordial fluctuations were generated to seed the subsequent growth of structure \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Even though current observations imply that inflation has certainly happened, characteristics of the field or the fields driving the inflationary expansion remain vastly unknown, and statistical properties of primordial fluctuations pose an intriguing problem in modern observational cosmology \citep[see, e.g.,][for a review]{Biagetti2019Galax...7...71B}. Early studies of cosmological observables have suggested that initial conditions of the universe are consistent with Gaussian fluctuations \citep{PhysRevD.69.103501, guth2005inflationary}; however, alternative classes of inflationary models predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity (PNG) depends on the local value of the gravitational potential $\phi$, and it is parameterized by a nonlinear coupling constant $\fnl$ \citep{komatsu2001acoustic},
+Cosmological observations support the paradigm of inflation in which the universe experienced a phase of rapid expansion in its early stage. Inflation elegantly addresses fundamental issues, such as the isotropy, flatness, and homogeneity of the universe as well as the absence of magnetic monopoles \citep[see, e.g.,][for a review]{weinberg2013observational}. At the end of inflation, the universe was reheated, and primordial perturbations seeded the subsequent growth of structure \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Despite inflation being considered as a compelling scenario, properties of the field or fields driving the inflationary expansion still remain vastly unexplored in modern observational cosmology \citep[see, e.g.,][for a review]{Biagetti2019Galax...7...71B}. Early studies of the cosmic microwave background (CMB) and large-scale structure (LSS) suggested that initial conditions of the universe are consistent with Gaussian and scale-invariant fluctuations \citep{PhysRevD.69.103501, guth2005inflationary}; however, alternative classes of inflationary models predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity (PNG) depends on the local value of the primordial potential $\phi$ \citep{komatsu2001acoustic},
 \begin{equation}
- \Phi = \phi + \fnl [\phi^{2} - <\phi^{2}>].
+ \Phi = \phi + \fnl [\phi^{2} - <\phi^{2}>],
 \end{equation}
-Standard slow-roll inflation predicts $\fnl$ to be of order $10^{-2}$ \citep[see, e.g.,][for a review]{alvarez2014arXiv1412.4671A}, while multi-field inflationary scenarios anticipate considerably higher than unity $\fnl$ values \citep[see, e.g.,][]{de2017next}. Therefore, getting robust constraints on $\fnl$ is the first stepping stone toward better understanding the dynamics of the early universe. PNG alters the local number density of galaxies by coupling the long and small wavelength modes of the dark matter gravitational field, and consequently, it induces a scale-dependent feature in the two point clustering of biased tracers of the dark matter gravitational field \citep{dalal2008imprints}.
+where $\fnl$ is a nonlinear coupling constant and $\phi$ is assumed to be a Gaussian random field. Local-type PNG generates a primordial bispectrum, which peaks in the squeezed limit. It alters the local number density of galaxies by coupling the long and small wavelength modes of the dark matter gravitational field, and consequently, it induces a very distinct scale-dependent bias \citep{dalal2008imprints}. 
 
-The current tightest bound on $\fnl$ comes from the three-point clustering measurement of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Upcoming generations of CMB experiments will improve this constraint, but since CMB is limited by cosmic variance, its data alone cannot enhance statistical precision of $\fnl$ measurements enough to break the degeneracy amongst various inflationary paradigms \citep[see, e.g.,][]{ade2019simons}. Combining CMB with LSS data could cancel cosmic variance, partially if not completely, and improve these results to a precision level needed to differentiate between alternative inflationary scenarios \citep[see, e.g.,][]{schmittfull2018PhRvD}. Constraining $\fnl$ with the three-point clustering of LSS is likewise hindered by the late-time nonlinear systematic effects raised from structure growth, which is non-trivial to account for \citep{baldauf2011galaxy, baldauf2011primordial}. UV Luminosity Function is a novel approach for constraining $\fnl$ by probing galaxy abundances and structure formation on small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to explore with the scale-dependent bias. \cite{sabti2021JCAP} used UV Luminosity Function from the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$. Even though this is still not competitive with the current bounds from CMB and LSS, upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope are forecast to yield up to four times improvements on $
-\fnl$ constraints from UV Luminosity Function. Given these limitations, the scale-dependent bias technique is the smoking gun for constraining local PNG with LSS. With this technique, \cite{mueller2022primordial} analyzed the large-scale clustering of quasars and obtained \mr{XXX} at $65\%$ confidence. \mr{cite recent measurements after eBOSS}.
 
-Measuring $\fnl$ with the scale-dependent bias effect is nonetheless incredibly challenging due to various systematic effects that modulate clustering power on scales where there is a high sensitivity to $\fnl$. These systematics are broadly classified into theoretical and observational. For instance, survey geometry entangles clustering power on different angular modes \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate scale-dependent signatures on large scales, identical to local PNG, which hinder measuring $\fnl$ with the scale-dependent bias effect using higher order multipoles of power spectrum \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey volume, known as super-sample modes, modulate galaxy power spectrum \citep{castorina2020JCAP}. Another source for systematic error is raised because the mean galaxy density for constructing the density contrast field is estimated from data directly rather than being known a priori. This integral constraint effect pushes clustering power on modes near the survey size to zero \citep{peacock1991large,de2019integral}. Accounting for these effects in modeling power spectrum is crucial to derive unbiased $\fnl$ constraints \citep[see, e.g.,][]{riquelme2022primordial}. On the other hand, observational systematics are driven primarily by varying imaging properties across the sky \citep{ross2011} and photometric calibration issues that manifest as spurious fluctuations in the observed density field of galaxies \citep{huterer2013calibration}. This type of systematic error is much more complicated to model and mitigate, compared to integral constraint and survey geometry, and it has hampered previous studies of local PNG with the scale-dependent bias effect in the large-scale clustering of galaxies and quasars \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the contribution of stellar density and astronomical seeing is too high for a robust $\fnl$ measurement using the quasar sample from the Sloan Digital Sky Survey Data Release 6. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to implement more relaxed selection criteria to include fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}. 
+Getting robust constraints on parameter $\fnl$ is the first stepping stone toward better understanding the dynamics of the early universe. Standard slow-roll inflation predicts $\fnl \sim 10^{-2}$ \citep[see, e.g.,][for a review]{alvarez2014arXiv1412.4671A}, while multi-field inflationary scenarios anticipate considerably larger values \citep[see, e.g.,][]{de2017next}. The current tightest bound on $\fnl$ comes from Planck's bispectrum measurement of CMB anisotropies, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Limited by cosmic variance, CMB data alone cannot enhance statistical precision of $\fnl$ measurements enough to break the degeneracy amongst various inflationary paradigms \citep[see, e.g.,][]{ade2019simons}. However, combining CMB with LSS data could cancel cosmic variance, partially if not completely, and improve these numbers significantly to $\sigma(\fnl) \sim 1$ \citep[see, e.g.,][]{schmittfull2018PhRvD}. Also, constraining $\fnl$ with the three-point clustering of LSS is hindered by nonlinearities raised from structure formation, which is non-trivial to model and disentangle from the primordial signal \citep{baldauf2011galaxy, baldauf2011primordial}. As a novel approach, UV Luminosity Function probes galaxy abundances and structure formation on small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to explore with the scale-dependent bias. \cite{sabti2021JCAP} used UV Luminosity Function from the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$. Even though this is still not competitive with the current bounds from CMB and LSS, upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope are forecast to yield up to four times improvements on $
+\fnl$ constraints from UV Luminosity Function. Given these observational limitations and theoretical challenges, the scale-dependent bias technique is the smoking gun for constraining local PNG with LSS. From theoretical point of view, further simulation-based studies of halo-assembly bias are required to fully utilize the scale-dependent bias \citep{2020JCAP...12..013B, 2020JCAP...12..031B, 2022JCAP...11..013B, 2023JCAP...01..023L}. Nevertheless, the current best $\fnl$ constraints from LSS achieve $\sigma(\fnl) \sim 20-30$, and most of the constraining power comes from the two point statistics utilizing the scale-dependent bias rather than higher order statistics \citep{2019JCAP...09..010C, mueller2022primordial, 2022PhRvD.106d3506C, 2022arXiv220111518D}.
+
+In spite of theoretical challenges, measuring $\fnl$ with the scale-dependent bias effect is nonetheless incredibly challenging due to various systematic effects that modulate clustering power on large scales, where the primordial signal is sensitive. For instance, survey geometry mixes clustering power on different angular scales \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate PNG-like scale-dependent signatures on large scales, which interfere with measuring $\fnl$ with the scale-dependent bias effect \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey size, known as super-sample modes, modulate galaxy power spectrum \citep{castorina2020JCAP}. Another source for systematic error is raised because the mean galaxy density for constructing the density contrast field is estimated from data directly rather than being known a priori. This integral constraint effect pushes clustering power on modes near survey size to zero \citep{peacock1991large,de2019integral}. Accounting for these theoretical systematic effects in the galaxy power spectrum is crucial to obtain unbiased inference \citep[see, e.g.,][]{riquelme2022primordial}. Other observational systematics are driven by varying photometric conditions across the sky \citep{ross2011} and photometric calibration issues that manifest as spurious fluctuations in the observed density field of galaxies \citep{huterer2013calibration}. This type of systematic error is much more complicated to mitigate, compared to integral constraint and survey geometry, and it has hampered previous studies of local PNG with the scale-dependent bias effect \citep[see, e.g.,][]{pullen2013systematic, Ho2015JCAP...05..040H}. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to implement more relaxed selection criteria to include fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}. 
  
-This paper presents robust constraints on $\fnl$ using the large-scale clustering of photometric galaxies from DESI imaging with exquisite emphasis on the treatment of imaging systematic error and mitigation biases. We measure the significance of residual systematic error in our data using angular cross-power spectrum (between galaxy density and imaging properties) and mean density contrast of galaxies. Specifically, the robustness of our results is validated against various sources of systematic error, including but not limited to photometric calibration and Milky Way foregrounds. We cross-correlate the density map of galaxies with the template maps of imaging properties to evaluate the effectiveness of different treatment methods and to characterize the significance level of remaining systematic error. Various linear and nonlinear data cleaning approaches are applied with different combinations of imaging templates to quantify the sensitivity of $\fnl$ constraints to alternative foreground removal methods. The redshift distribution of galaxies for modeling power spectrum is determined by early spectroscopy from the DESI Survey Validation. This paper is structured as follows. Section \ref{sec:data} describes the sample of LRGs from DESI imaging and lognormal simulations of galaxy density field with and without PNG and imaging systematic effects. Section \ref{sec:method} outlines the theoretical framework for modeling angular power spectrum and analysis techniques to account for various observational and theoretical systematic error. Finally, we present $\fnl$ constraints in Section \ref{sec:results}, and conclude with a comparison to previous $\fnl$ studies in Section \ref{sec:conclusion}.
+As an ongoing wide-area galaxy survey, the Dark Energy Spectroscopic Instrument (DESI) uses $5000$ robotically-driven fibers to simultaneously collect spectra. DESI is designed to deliver an unparalleled volume of spectroscopic data over its five year mission that will deepen our understanding of the equation of state for dark energy \citep{aghamousa2016desi}. Assuming systematic errors are under control, DESI has the potential to provide competitive constraints on local PNG with $\sigma(\fnl)=5$ \citep{aghamousa2016desi}. Unprecedented precision with $\sigma (\fnl) \sim 1$ can be achieved by combining datasets from DESI and other upcoming surveys, such as Rubin Observatory and SphereX \citep[see, e.g.,][]{Heinrich2022AAS...24020203H}.
+ 
+The purpose of this paper is to probe local PNG using the scale-dependent bias signature in the angular power spectrum of luminous red galaxies selected from DESI imaging data. Linear multivariate regression and neural networks are applied to clean and prepare our sample for such a delicate signal. Our results are validated against suites of lognormal simulations with $\fnl=0$ and $76.9$, and potential sources of systematic error such as survey depth, astronomical seeing, photometric calibration, Milky Way extinction, and local stellar density. A particular objective is to quantify the sensitivity of $\fnl$ signal to various treatment methods. The cross power spectra between the galaxy density and imaging property maps are calculated to evaluate the effectiveness of different strategies for cleaning contaminations and to characterize the significance level of remaining systematic error. 
+
+This paper is structured as follows. Section \ref{sec:data} describes the galaxy sample from DESI imaging and lognormal simulations with, or without, PNG and synthetic systematic effects. Section \ref{sec:method} outlines the theoretical framework for modeling the angular power spectrum, strategies for handling various observational and theoretical systematic effects, and statistical techniques for measuring the significance of remaining systematics in our sample after mitigation. Our results are presented in Section \ref{sec:results}, and Section \ref{sec:conclusion} summarizes our conclusions and directions for future work.
