--- a/sections/acknowledgement.tex
+++ b/sections/acknowledgement.tex
@@ -1,5 +1,5 @@
 \section*{Acknowledgements}
-MR is supported by XXXXXX. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{OhioSupercomputerCenter1987}. MR is thankful for hospitality at the OSU CCAPP in particular facilitated by John Beacom and Lisa Colarosa. We would like to thank the open-source software and resources that were beneficial to this research: Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, Jupyter, arXiv, and GitHub. 
+MR is supported by XXXXXX. We would like to thank Eva Mueller, Will Percival, Tanveer Karim, and Sukhdeep Singh for helpful discussions. MR is thankful for hospitality at the OSU CCAPP in particular facilitated by John Beacom and Lisa Colarosa. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{OhioSupercomputerCenter1987}. We would like to thank the open-source software and resources that has helped this research: Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, Jupyter, and GitHub. This research has made use of the arXiv preprint server and NASA’s Astrophysics Data System.
 
 
 This research is supported by the Director, Office of Science, Office of High Energy Physics of the U.S. Department of Energy under Contract No. DE–AC02–05CH11231, and by the National Energy Research Scientific Computing Center, a DOE Office of Science User Facility under the same contract; additional support for DESI is provided by the U.S. National Science Foundation, Division of Astronomical Sciences under Contract No. AST-0950945 to the NSF’s National Optical-Infrared Astronomy Research Laboratory; the Science and Technologies Facilities Council of the United Kingdom; the Gordon and Betty Moore Foundation; the Heising-Simons Foundation; the French Alternative Energies and Atomic Energy Commission (CEA); the National Council of Science and Technology of Mexico (CONACYT); the Ministry of Science and Innovation of Spain (MICINN), and by the DESI Member Institutions.
@@ -7,5 +7,3 @@ This research is supported by the Director, Office of Science, Office of High En
 The DESI Legacy Imaging Surveys consist of three individual and complementary projects: the Dark Energy Camera Legacy Survey (DECaLS), the Beijing-Arizona Sky Survey (BASS), and the Mayall z-band Legacy Survey (MzLS). DECaLS, BASS and MzLS together include data obtained, respectively, at the Blanco telescope, Cerro Tololo Inter-American Observatory, NSF’s NOIRLab; the Bok telescope, Steward Observatory, University of Arizona; and the Mayall telescope, Kitt Peak National Observatory, NOIRLab. NOIRLab is operated by the Association of Universities for Research in Astronomy (AURA) under a cooperative agreement with the National Science Foundation. Pipeline processing and analyses of the data were supported by NOIRLab and the Lawrence Berkeley National Laboratory. Legacy Surveys also uses data products from the Near-Earth Object Wide-field Infrared Survey Explorer (NEOWISE), a project of the Jet Propulsion Laboratory/California Institute of Technology, funded by the National Aeronautics and Space Administration. Legacy Surveys was supported by: the Director, Office of Science, Office of High Energy Physics of the U.S. Department of Energy; the National Energy Research Scientific Computing Center, a DOE Office of Science User Facility; the U.S. National Science Foundation, Division of Astronomical Sciences; the National Astronomical Observatories of China, the Chinese Academy of Sciences and the Chinese National Natural Science Foundation. LBNL is managed by the Regents of the University of California under contract to the U.S. Department of Energy. 
 
 The authors are honored to be permitted to conduct scientific research on Iolkam Du’ag (Kitt Peak), a mountain with particular significance to the Tohono O’odham Nation."
-
-%We thank the anonymous referee for their insightful comments and suggestions. M.R. is supported by the U.S.~Department of Energy, Office of Science, Office of High Energy Physics under DE-SC0014329; H.-J.S. is supported by the U.S.~Department of Energy, Office of Science, Office of High Energy Physics under DE-SC0014329 and DE-SC0019091. We acknowledge the support and resources from the Ohio Supercomputer Center \citep[OSC;][]{Owens2016}. Specifically, this work utilized more than $359000$ core hours of the Owens cluster. M.R. is grateful for help from Xia Wang, Antonio Marcum, and Yu Feng. G.R. acknowledges support from the National Research Foundation of Korea (NRF) through Grants No. 2017R1E1A1A01077508 and No. 2020R1A2C1005655 funded by the Korean Ministry of Education, Science and Technology (MoEST). We would like to appreciate the open-source software and modules that were invaluable to this research: Pytorch, Nbodykit, HEALPix, Fitsio, Scikit-Learn, NumPy, SciPy, Pandas, IPython, Jupyter, and GitHub.
